INTYGFV-14370: Updated gradle and dependency versions. Applied necessary changes. Activated JUnitPlatform. Bumped versions for release/2022-2. (#325)